--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -34,11 +34,13 @@ jobs:
 
       - name: Create GitHub Release
         run: |
-          curl -s -X POST \
-            https://api.github.com/repos/vi-technologies/frontend-vi-engage/releases \
-            -H "Content-Type: application/json" \
+            curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -d '${{ steps.tag_id.outputs.TAG }}'
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/vi-technologies/frontend-vi-engage/releases \
+            -d '{"tag_name":${{ steps.tag_id.outputs.TAG }},"target_commitish":"master","name":${{ steps.tag_id.outputs.TAG }},"body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
