--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -38,10 +38,10 @@ jobs:
           curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer <YOUR-TOKEN>" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/IdoGvili/TaskOne/releases \
-          -d "{"tag_name":"${{ steps.tag_id.outputs.TAG }}","target_commitish":"master",\name":"${{ steps.tag_id.outputs.TAG }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}"
+          https://api.github.com/repos/OWNER/REPO/releases \
+          -d '{"tag_name":"v1.0.0","target_commitish":"master","name":"v1.0.0","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
     
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
