--- a/.github/workflows/new_release.yml
+++ b/.github/workflows/new_release.yml
@@ -41,7 +41,7 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/IdoGvili/TaskOne/releases \
-          -d '{"tag_name":"staginfg_v6.5.4","target_commitish":"master","name":"v6.5.4","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
+          -d '{"tag_name":"staginfg_v6.5.4","name":"v6.5.4","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
     
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
